--- a/cfg/OpticFlowNode.cfg
+++ b/cfg/OpticFlowNode.cfg
@@ -15,6 +15,7 @@ rings.add("inner_ring_radius", double_t, 0, "Inner ring radius"                ,
 rings.add("ring_dr", int_t, 0, "Pixels between rings"                ,                          20,    1, 100         )
 rings.add("num_ring_points", int_t, 0, "Number of points in a ring"            ,              80,       1, 1000          )
 rings.add("num_rings", int_t, 0, "Number of rings"                      ,                       5,       1, 10          )
+rings.add("blur_size", int_t, 0, "Blur size"                      ,                             5,       0, 101          )
 
 lk = group.add_group("Lucas Kanade Parameters")
 lk.add("pyr_window_size", int_t, 0, "LK Pyramidal window size"           ,                      30,      1, 1000          )
