First simple screen recorder video.

--- a/cfg/OpticFlowNode.cfg
+++ b/cfg/OpticFlowNode.cfg
@@ -31,5 +31,9 @@ image.add("if_flip",            bool_t,   0, "Flag to flip the image",          
 image.add("if_blur",            bool_t,   0, "Flag to blur the input image",    False)
 image.add("blur_size",          int_t,    0, "Blur size",                       21,          1,      100     )
 image.add("enable_debug",       bool_t,   0, "Enable debugging ",               True)
+image.add("resize_of_cols",     double_t, 0, "Resize for optic flow columns",   1.0,         0.0,    1000.0  )
+image.add("resize_of_rows",     double_t, 0, "Resize for optic flow rows",      1.0,         0.0,    1000.0  )
+image.add("resize_vz_cols",     double_t, 0, "Resize for viz columns",          1.0,         0.0,    1000.0  )
+image.add("resize_vz_rows",     double_t, 0, "Resize for viz rows",             1.0,         0.0,    1000.0  )
 
 exit(gen.generate(PACKAGE, "optic_flow_node", "OpticFlowNode"))
